--- a/Backend/web/index.xhtml
+++ b/Backend/web/index.xhtml
@@ -13,6 +13,9 @@
         <h:link outcome="/order/List" value="Show All Order Items"/>
         <br />
         <h:link outcome="/product/List" value="Show All Product Items"/>
+        <!--        <br />
+                <h:link outcome="/Spamlet" value="Spammer" />-->
+        <!--Can't even make a link...-->
     </h:body>
 
 
